2002-04-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/item-cursor.c (item_cursor_target_region_ok) : fix message dialog

2002-04-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/mstyle.c (mstyle_new_default) : protect against faulty
	  schema installation
	* src/style.c (font_init) : protect against faulty
	  schema installation and also configure bold and italic default fonts.

2002-04-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-general.schemas : add default font schemas
	* src/application.[ch] : add central preferences dialog
	* src/main.c : dispose of preference dialog on exit
	* src/mstyle.c : use gconf data to initialize default style
	* src/style.[ch] : use gconf data to initialize default style
	* src/workbook-control-gui.c : add preference menu items

2002-04-01  Morten Welinder  <terra@diku.dk>

	* src/expr.c (expr_eval_real): Fix overflow for EXP case.  (Twice.)

	* src/mathfunc.c (gnumeric_fake_trunc): Fix for negative valus.

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c : use workbook signals
	* src/commands.h : include tools/tools.h rather than dialogs/tools.h 
	* src/summary.c (summary_info_add) : return boolean
	* src/summary.h (summary_info_add) : return boolean
	* src/workbook.c : new workbook signals
	(workbook_add_summary_info) : new, emit signal
	(workbook_set_filename) : emit signal
	* src/workbook.h : new workbook signals

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (cmd_analysis_tools_undo) : clear region
	  before pasting (to avoid leaving cell comments behind)

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c : cmd_analysis_tools allow the engines
	  to carry info from TOOL_ENGINE_LAST_VALIDITY_CHECK to
	  TOOL_ENGINE_PERFORM_CALC
	* src/commands.h : include dialogs/tools.h rather than 
	  tools/analysis-tools.h

2002-03-31  Jody Goldberg <jody@gnome.org>

	* src/gui-util.c (gnumeric_toolbar_new) : respect ui preferences.
